user-profile-tripinsights-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: userprofile-1.0
 namespace: tripinsights-api
 labels:
   version: "1.0"
   name: userprofile
spec:
  replicas: 1
  selector:
    matchLabels:
     name: userprofile
     version: "1.0"
  template:
   metadata:
     labels:
       name: userprofile
       version: "1.0"
   spec:
     containers:
     - image: registrymbp2514.azurecr.io/tripinsights/userprofile:1.0
       imagePullPolicy: Always
       name: userprofile
       ports:
       - containerPort: 80
