user-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: user-java-1.0
 namespace: tripinsights
 labels:
   version: "1.0"
   name: user-java
spec:
  replicas: 1
  selector:
    matchLabels:
     name: user-java
     version: "1.0"
  template:
   metadata:
     labels:
       name: user-java
       version: "1.0"
   spec:
     containers:
     - image: registrymbp2514.azurecr.io/tripinsights/user-java:1.0
       imagePullPolicy: Always
       name: user-java
       ports:
       - containerPort: 80
---
apiVersion: v1
kind: Service
metadata: 
  name: user-java-service
  labels: 
    name: user-java
spec:
  ports:
  - port: 80
  selector: 
    name: user-java
    version: "1.0"
  type: ClusterIP
