ingress-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tripinsight-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /api/trips/(.*)
        pathType: Prefix
        backend:
          service:
            name: tripapi-service
            port:
              number: 80
      - path: /api/poi/(.*)
        pathType: Prefix
        backend:
          service:
            name: poi-service
            port:
              number: 80
      - path: /api/user-java/(.*)
        pathType: Prefix
        backend:
          service:
            name: user-java-service
            port:
              number: 80
      - path: /api/user/(.*)
        pathType: Prefix
        backend:
          service:
            name: userprofile-service
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: viewer-service
            port:
              number: 80
